# simple-rust-microblog

./: Cargo.toml  LICENSE  readme.md
content/: first_post.lol  readme.md  second_post.lol
content/2020_november/: second_post.hmm
content/2020_october/: first_post.hmm
src/: content_compiler.rs  content_monitor.rs  main.rs  site_cache.rs  tokens.rs
templates/: index.html.tera
