[package]
name = "simple-blog"
version = "0.1.0"
authors = ["mpiepenbrink"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
lazy_static = "1.4.0"
itertools = "0.9.0"
notify = "4.0.12"
walkdir = "2"

[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["tera_templates"]
#features = ["handlebars_templates", "tera_templates"]
